[package]
name = "my_crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
spider = { path = "../spider", features = ["chrome", "sync", "cache_request", "cache_chrome_hybrid"] }
tokio = { version = "1.0", features = ["full"] }
html2md = "0.2.15"
reqwest = { version = "0.11", features = ["json"] }
roxmltree = "0.14"
