[package]
name = "my_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
spider = { git = "https://github.com/spider-rs/spider", branch = "main" }
html2md = "0.2.15"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "stream", "cookies", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
